aws/alb.tf
resource "aws_lb" "app_alb" {
  name               = "${var.environment}-app-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = module.vpc.public_subnets
}

resource "aws_lb_target_group" "ecs_tg" {
 name     = "${var.environment}-ecs-tg"
 port     = 80
 protocol = "HTTP"
 vpc_id   = module.vpc.vpc_id

 health_check {
   path = "/"
   interval = 30
   timeout = 5
   healthy_threshold = 2
   unhealthy_threshold = 2
   matcher = "200"
 }
}

resource "aws_lb_listener" "http_listener" {
 load_balancer_arn = aws_lb.app_alb.arn
 port              = 80
 protocol          = "HTTP"

 default_action {
   type = "forward"
   target_group_arn = aws_lb_target_group.ecs_tg.arn
 }
}
